--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,6 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -150,7 +149,13 @@
 		    <artifactId>tiles-jsp</artifactId>
 		    <version>2.2.2</version>
 		  </dependency>
-
+		  
+		  <!-- Spring data -->
+		  <dependency>
+	      	<groupId>org.springframework.data</groupId>
+	        <artifactId>spring-data-mongodb</artifactId>
+	        <version>1.6.0.RELEASE</version>
+	      </dependency>
 	</dependencies>
 	<build>
 		<plugins>
