--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,17 @@
 		    <artifactId>tiles-jsp</artifactId>
 		    <version>2.2.2</version>
 		  </dependency>
+		
+		<!-- xml pull parser -->
+		<!-- https://mvnrepository.com/artifact/pull-parser/pull-parser -->
+		<!-- https://mvnrepository.com/artifact/org.ogce/xpp3 -->
+		<dependency>
+		    <groupId>org.ogce</groupId>
+		    <artifactId>xpp3</artifactId>
+		    <version>1.1.6</version>
+		</dependency>
 
+		
 	</dependencies>
 	<build>
 		<plugins>
